force-app/main/default/objects/Order_Items__c/Order_Items__c.object-meta.xml
<CustomObject>
    <label>Order_Items</label>
    <nameField>
        <label>Order_Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order_Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>