force-app/main/default/objects/Order_Items__c/validationRules/stock_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>stock_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Product__r.Stock_Quantity__c &lt;  Quantity__c</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Not enough stock available to order. Please reduce the quantity.</errorMessage>
</ValidationRule>